--- a/java101/.project
+++ b/java101/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CAMT491</name>
+	<name>MonsterFightSim</name>
 	<comment></comment>
 	<projects>
 	</projects>
